Convertor from NIL's output to NiCad's output

--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>edu.tarleton.drduplex.Main</mainClass>
+                            <mainClass>edu.tarleton.evaltool.Main</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
